# rust-raytracer

./: Cargo.toml  README.md
src/: frame_buffer.rs  lib.rs  main.rs
src/geometry/: mod.rs  ray.rs  sphere.rs  traceable.rs
src/scene/: camera.rs  light.rs  material.rs  mod.rs  scene.rs  texture.rs
src/tests/: geometry_test.rs  mod.rs
