[package]
name = "rust_tracer"
version = "0.1.0"
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3"
env_logger = "0.9"
getrandom = "0.2"
line_drawing = "0.8"
image = "0.23.14"
glam = "0.18.0"
winit = "0.25.0"
pixels = "0.6.0"
winit_input_helper = "0.10"
randomize = "3.0"
rand = "0.8.4"
log = "0.4"